force-app/main/default/objects/CityTechnicalData__c/CityTechnicalData__c.object-meta.xml
<CustomObject>
    <label>Dato Tecnico Comunale</label>
    <nameField>
        <displayFormat>DTC - {000000}</displayFormat>
        <label>Numero Dato Tecnico Comunale</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dati Tecnici Comunali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>