force-app/main/default/objects/CityTechnicalData__c/fields/AttachmentString__c.field-meta.xml
<CustomField>
    <fullName>AttachmentString__c</fullName>
    <label>Stringa Allegati Obbligatori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>