force-app/main/default/objects/CityTechnicalData__c/fields/CadastralCity__c.field-meta.xml
<CustomField>
    <fullName>CadastralCity__c</fullName>
    <label>Comune catastale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>