force-app/main/default/objects/CityTechnicalData__c/fields/CityCode__c.field-meta.xml
<CustomField>
    <fullName>CityCode__c</fullName>
    <label>Codice comune catastale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>