force-app/main/default/objects/CityTechnicalData__c/fields/CityMMS__c.field-meta.xml
<CustomField>
    <fullName>CityMMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag comune MMS</label>
    <type>Checkbox</type>
</CustomField>