force-app/main/default/objects/CityTechnicalData__c/fields/CityNotManagedAlert__c.field-meta.xml
<CustomField>
    <fullName>CityNotManagedAlert__c</fullName>
    <label>Alert comune non gestito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>