force-app/main/default/objects/CityTechnicalData__c/fields/CutOverEndDate__c.field-meta.xml
<CustomField>
    <fullName>CutOverEndDate__c</fullName>
    <label>Data fine cut-over</label>
    <type>Date</type>
</CustomField>