force-app/main/default/objects/CityTechnicalData__c/fields/ManagedDoor__c.field-meta.xml
<CustomField>
    <fullName>ManagedDoor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestito sportello</label>
    <type>Checkbox</type>
</CustomField>