force-app/main/default/objects/CityTechnicalData__c/fields/ManagedTCP__c.field-meta.xml
<CustomField>
    <fullName>ManagedTCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag gestito TCP</label>
    <type>Checkbox</type>
</CustomField>