force-app/main/default/objects/CityTechnicalData__c/fields/TARIManaged__c.field-meta.xml
<CustomField>
    <fullName>TARIManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TARI Gestita</label>
    <type>Checkbox</type>
</CustomField>