force-app/main/default/objects/CityTechnicalData__c/fields/TARIManagingEndDate__c.field-meta.xml
<CustomField>
    <fullName>TARIManagingEndDate__c</fullName>
    <label>Data fine gestione TARI</label>
    <type>Date</type>
</CustomField>