force-app/main/default/objects/CityTechnicalData__c/fields/TARIManagingStartDate__c.field-meta.xml
<CustomField>
    <fullName>TARIManagingStartDate__c</fullName>
    <label>Data inizio gestione TARI</label>
    <type>Date</type>
</CustomField>