force-app/main/default/objects/CityTechnicalData__c/fields/UnicPaymentLimitDate__c.field-meta.xml
<CustomField>
    <fullName>UnicPaymentLimitDate__c</fullName>
    <label>Data Limite Pagamento Unico</label>
    <type>Date</type>
</CustomField>