force-app/main/default/objects/CityTechnicalData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Province__c</columns>
    <columns>TARIManaged__c</columns>
    <columns>TARIManagingStartDate__c</columns>
    <columns>TARIManagingEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>